# String-Group-By-Parallel-Algorithm

./: .gitignore  2000.txt  CMakeLists.txt  README.md  hashmap.h  hashmap_base.h  main.c  measure.c  measure.h  mpi_group_by.c  mpi_group_by.h  omp_group_by.c  omp_group_by.h  serial_funcion.c  serial_funciton.h  string_group_by.c  string_group_by.h  test.c  test.h
